// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_COORDS 1`] = `
Array [
  Object {
    "data": Object {
      "key": 0.05723000657152855,
      "location": "00000",
    },
    "type": "ADD_COORDS",
  },
]
`;

exports[`ADD_PRODUCT 1`] = `
Array [
  Object {
    "data": Object {
      "key": 0.9008418350000806,
      "name": "espinaca",
    },
    "type": "ADD_PRODUCT",
  },
]
`;

exports[`DELETE_PRODUCT 1`] = `
Array [
  Object {
    "key": 0.5880098879062283,
    "type": "DELETE_PRODUCT",
  },
]
`;
